css/navbar.css
@import './variables.css';

header {
  width: 100%;
  height: 10rem;
  background-color: var(--light-white);
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2rem 20rem;
}

.logo {
  height: 5rem;
}

/*Barra de navegación*/
.nav-list {
  list-style-type: none;
  display: flex;
  gap: 5em;
  z-index: 10;
}

.nav-list li a {
  color: var(--light-gray);
  font-size: 2rem;
  font-weight: 400;
  
}

.abrir-menu, 
.cerrar-menu{
  display: none;
}

@media screen and (max-width: 540px){

  header {
    width: 100%;
    height: 8rem;
    padding: 3rem;
  }

  .logo {
    height: 3.5rem;  
  }

  .abrir-menu, 
  .cerrar-menu{
    display: block;
    border: 0;
    background-color: transparent;
    cursor: pointer;
  }

  nav {
    opacity: 0;
    visibility: hidden;
    display: flex;
    flex-direction: column;
    align-items: end;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    background-color: var(--very-dark);
    padding: 3rem;
    box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5);
  }

  .visible {
    opacity: 1;
    visibility: visible;
  }  

  .nav-list {
    flex-direction: column;
    align-items: end;
    margin-top: 5rem;
  }

  .nav-list li a {
    color: var(--light-white);
    font-weight: 300;
    margin-left: 3rem;
  }

}

@media screen and (min-width: 541px) and (max-width: 768px) {
  /*Barra de navegación*/
  header {
    width: 100%;
    height: 10rem;
    padding: 3rem;
  }
  
}

@media screen and (min-width: 769px) and (max-width: 1024px) {
  /*Barra de navegación*/
  header {
    width: 100%;
    height: 10rem;
    padding: 2rem 7rem;
  }
  
}

